# rpg_map

./: .gitignore  .readthedocs.yaml  Cargo.toml  README.rst  pyproject.toml  rpg_map.pyi
.github/workflows/: CI.yml  build_docs.yml  generate_docs_images.yml  generate_stub_file.yml  publish.yaml  test.yml
docs/source/: conf.py  test.rst
docs/source/_ext/: process_readme.py
examples/: static_poc.py
rpg_map/: __init__.py  rpg_map.pyi
src/: lib.rs  main.rs
src/structs/: map.rs  path.rs  travel.rs
src/tests/: map.rs
test/: static_poc.py
workaround/: Cargo.toml
workaround/src/: lib.rs
