[package]
name = "rpg_map"
version = "0.0.2"
edition = "2021"

[lib]
name = "rpg_map"

crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.23.3"
geo = "0.29.3"
pyo3-stub-gen = "0.7.0"

[dev-dependencies]
image = "0.25.6"
pyo3 = { version = "0.23.3", features = ["auto-initialize"] }

[features]
extension-module = ["pyo3/extension-module"] 